commit to test back ground zoom bug on mobile

--- a/view/css/general-styles.css
+++ b/view/css/general-styles.css
@@ -24,6 +24,21 @@
 }
 
 
+/* Loader Styling */
+    .loader {
+        border: 16px solid #f3f3f3; /* Light grey */
+        border-top: 16px solid #3498db; /* Blue */
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+
 /* Header Styling */
     #start-button{
         display: block;
@@ -40,18 +55,20 @@
         width:54px;
         margin: 0 auto;
     }
-    #head {
-        width:100%;
-        height:  100vh;
-        overflow: hidden;
-        position: fixed;
-        background-image:  url('./../images/headerImage.jpeg');
+    html{
+        background-image: url('./../images/headerImage.jpeg');
         -moz-background-size: cover;
         -webkit-background-size: cover;
         background-size: cover;
         background-position: top center !important;
         background-repeat: no-repeat !important;
         background-attachment: fixed;
+    }
+    #head {
+        width:100%;
+        height:  100vh;
+        overflow: hidden;
+        position: fixed;
         z-index: -1;
     }
     #header-title {
@@ -213,6 +230,9 @@
         padding-top: calc(100vh + 54px);
     }
     #start-button{
+        border-style: solid;
+        border-width: 0px 0px 5px 0px;
+        border-color: red;
         width: 100%
     }
 	.section-body{
